--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ nav {
 
 .nav-contact-links-container {
   margin: 0 0 0 auto;
+  padding: 0 130px 0 0;
   list-style: none;
   display: flex;
   align-items: center;
@@ -79,10 +80,6 @@ nav {
 
 .nav-contact-link:hover {
   color: rgb(96, 156, 180);
-}
-
-.burger-wrapper {
-  padding: 0 0 0 55px;
 }
 
 
@@ -190,7 +187,7 @@ section p {
 }
 
 .about-section p {
-  font-weight: 400;
+  font-weight: 300;
 }
 
 .about-content a {
@@ -338,7 +335,125 @@ footer {
   margin-left: 10px;
 }
 
+/*-- HAMBURGER MENU --*/
 
+.burger-wrapper {
+  /* padding: 0 0 0 55px; */
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 4;
+}
+
+.burger-wrapper .toggler {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 5;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  opacity: 0;
+}
+
+.burger {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 4;
+  width: 40px;
+  height: 40px;
+  background:rgb(56, 56, 56);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: color
+}
+
+/*- burger layers -*/
+.burger > div {
+  position: relative; 
+  width: 100%;
+  height: 2px;
+  background-color: rgb(221, 221, 221);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 400ms ease;
+}
+
+.burger > div:before,
+.burger > div:after {
+  content: '';
+  position: absolute;
+  z-index: 4;
+  top: -10px;
+  width: 100%;
+  height: 2px;
+  background: inherit;
+}
+
+.burger > div:after {
+  top: 10px;
+}
+
+.toggler:hover + .burger > div {
+  background-color: rgb(96, 156, 180);
+}
+
+/*- burger animation -*/
+.toggler:checked + .burger > div {
+  transform: rotate(135deg);
+}
+
+.toggler:checked + .burger > div:before,
+.toggler:checked + .burger > div:after {
+  top: 0;
+  transform: rotate(90deg);
+}
+
+/*- nav menu -*/
+.nav-menu {
+  position: fixed;
+  top: 60px;
+  right: 0;
+  /* width: 400px; */
+  /* height: 500px; */
+  /* visibility: hidden; */
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 50px;
+  border-radius: 6px;
+  background-color: rgb(65, 65, 65);
+  box-shadow: 0 0 10px rgb(65, 65, 65);
+  font-size: 1.5rem;
+  /* z-index: -1; */
+  transform: scaleY(0);
+  transition: all 400ms ease;
+}
+
+.nav-menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  line-height: 3rem;
+}
+
+.nav-menu > ul > li > a:hover {
+  transition: color 600ms ease;
+  color: rgb(96, 156, 180);
+}
+
+.toggler:checked + .burger > div:before,
+.toggler:checked ~ .nav-menu {
+  /* visibility: visible; */
+  /* transform: scale(1); */
+  transform: scaleY(1);
+}
+
+/* .toggler:checked ~ .nav-menu  */
 
 /*--- defining pseudo-classes ---*/
 
