--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ p {
   margin: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /*- nav bar -*/
 nav {
   position: fixed;
@@ -62,7 +66,7 @@ nav {
 
 .nav-contact-links-container {
   margin: 0 0 0 auto;
-  padding: 0 130px 0 0;
+  padding: 0 70px 0 0;
   list-style: none;
   display: flex;
   align-items: center;
@@ -120,7 +124,7 @@ header {
 
 header h1 {
   margin: 5%;
-  font-size: 3rem;
+  font-size: 3.3rem;
 }
 
 header p {
@@ -136,7 +140,7 @@ section {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  padding: 5%;
+  padding: 90px 5% 5% 5%;
 }
 
 section h2 {
@@ -340,15 +344,15 @@ footer {
 .burger-wrapper {
   /* padding: 0 0 0 55px; */
   position: fixed;
-  top: 10px;
-  right: 10px;
+  top: 8px;
+  right: 18px;
   z-index: 4;
 }
 
 .burger-wrapper .toggler {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 8px;
+  right: 18px;
   z-index: 5;
   cursor: pointer;
   width: 40px;
@@ -358,8 +362,8 @@ footer {
 
 .burger {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 8px;
+  right: 18px;
   z-index: 4;
   width: 40px;
   height: 40px;
@@ -367,7 +371,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: color
+  transition: background-color 400ms ease;
 }
 
 /*- burger layers -*/
@@ -402,6 +406,10 @@ footer {
 }
 
 /*- burger animation -*/
+.toggler:checked + .burger {
+  background-color: rgb(54, 54, 54);
+}
+
 .toggler:checked + .burger > div {
   transform: rotate(135deg);
 }
@@ -415,22 +423,19 @@ footer {
 /*- nav menu -*/
 .nav-menu {
   position: fixed;
-  top: 60px;
+  top: 0;
   right: 0;
-  /* width: 400px; */
-  /* height: 500px; */
-  /* visibility: hidden; */
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px 50px;
+  padding: 50px 90px 30px 60px;
   border-radius: 6px;
-  background-color: rgb(65, 65, 65);
+  background-color: rgb(54, 54, 54);
   box-shadow: 0 0 10px rgb(65, 65, 65);
   font-size: 1.5rem;
-  /* z-index: -1; */
   transform: scaleY(0);
+  transform-origin: top;
   transition: all 400ms ease;
 }
 
