--- a/style.css
+++ b/style.css
@@ -34,8 +34,6 @@ html {
   scroll-behavior: smooth;
 }
 
-
-
 /*- nav bar -*/
 nav {
   position: fixed;
@@ -102,11 +100,10 @@ nav {
   color: rgb(96, 156, 180);
 }
 
-
 /*- header intro -*/
 header {
   position: relative;
-  background-image: url('./images/mt_backdrop.jpg');
+  background-image: url('./images/mt_backdrop_mobile-crop.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -131,9 +128,7 @@ header {
   justify-content: center;
   text-align: center;
   width: 80%;
-  /* height: 80%; */
   padding: 20px 0;
-  
   background-color: rgba(255, 255, 255, 0.7);
   border-radius: 15px;
   box-shadow: 0 0 8px rgb(167, 167, 167);
@@ -148,7 +143,6 @@ header p {
   margin: 5%;
   font-size: 1.5rem;
 }
-
 
 /*- about me / project sections -*/
 section {
@@ -170,7 +164,6 @@ section p {
   font-size: 1.2rem;
   margin: 1%;
 }
-
 
 /*- about me section -*/
 .about-section {
@@ -318,7 +311,6 @@ section p {
 
 /*- footer section -*/
 footer {
-  /* position: absolute; */
   width: 100%;
   color: rgb(221, 221, 221);
   background-color: rgb(56, 56, 56);
@@ -365,7 +357,6 @@ footer {
 }
 
 /*-- HAMBURGER MENU --*/
-
 .burger-wrapper {
   position: fixed;
   top: 8px;
@@ -485,8 +476,7 @@ footer {
 body a { text-decoration: none;}
 body a:link    { color: rgb(221, 221, 221);}
 body a:visited { color: rgb(221, 221, 221);}
-/* body a:hover   { color: rgb(221, 221, 221);} */
-/* body a:active  { color: rgb(221, 221, 221);} */
+body a:active  { color: rgb(221, 221, 221);}
 
 
 /*-- Responsive formatting --*/
@@ -582,7 +572,6 @@ body a:visited { color: rgb(221, 221, 221);}
   .footer-link-label {
     margin-left: 10px;
   }
-
   
 }
 
@@ -610,6 +599,10 @@ body a:visited { color: rgb(221, 221, 221);}
 
   .nav-contact-link {
     margin: 5px 15px;
+  }
+
+  header {
+    background-image: url('./images/mt_backdrop.jpg');
   }
 
   .project-screenshot-container {
